# pywatemsedem

./: .buildinfo  .coverage  .coveragerc  .drone.yml  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  authors.html  changelog.html  codeofconduct.html  conduct.html  contributing.html  development.html  environment.yml  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_nonpinned.yml  ci_pinned.yml  conda-gdal.yml  deploy.yml  linting.yml  update_docs.yml
_modules/: index.html
_modules/pywatemsedem/: buffers.html  (+19 more)
_sources/: contributing.rst.txt  index.rst.txt
_static/: documentation_options.js
api/: modules.html  pywatemsedem.geo.html  pywatemsedem.html  pywatemsedem.io.html
ci/: Dockerfile.venv  Dockerfile.winvenv  README.md
docs/: codeofconduct.rst  conf.py  contributing.rst  development.rst  gettingstarted.md  index.md  index.rst  installation.rst
getting-started/: api.html  api.ipynb  calibrate.html  choices.html  geo.html  io.html  modelinput_modeloutput.html  userchoices.html
tests/: conftest.py  test_calibrate.py  test_catchment.py  test_cfactor.py  test_choices.py  test_errors.py  test_folders.py  test_grasstrips.py  test_postprocess.py  test_scenario.py  test_tools.py  test_valid.py
(+611 files in other folders)
